fix some style on iphone

--- a/css/createWalls.css
+++ b/css/createWalls.css
@@ -1,13 +1,13 @@
 .headerWrap {
     width: 100vw;
     height: 64px;
-    margin-left: 0px;
     padding:0;
     margin-top: 0;
     background-color: #e0e0e0;
     display: flex;
     flex-direction: row;
     align-items: center;
+    transform: translateX(-2%) translateY(-5%);
 }
 
 #addButton{
@@ -51,6 +51,7 @@ ul li a:hover,ul li a:focus{
     width: 100vw;
     height: 48px;
     background-color: #eeeeee;
+    transform: translate(-2%, -5%);
 }
 
 
@@ -90,7 +91,8 @@ ul li a:hover,ul li a:focus{
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
+  padding-inline-start: 0;
 }
 
 .container li{
@@ -98,8 +100,8 @@ ul li a:hover,ul li a:focus{
 }
 
 .container li a{
-  width:144px;
-  height:144px;
+  width: 200px;
+  height: 200px;
   padding: 12px;
   color:#000000;
   background:#c4c4c4;
@@ -108,15 +110,15 @@ ul li a:hover,ul li a:focus{
 }
 
 ul li{
-  margin:24px;
+  margin: 5%;
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 1.5em;
   text-align: left;
 }
    
 p {
-  font-size: 16px;
+  font-size: 1em;
   text-align: left;
 }
